--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -15,6 +15,10 @@
       align-items: center;
     }
     div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 28px;
       width: 200px;
       height: 200px;
       background-color: teal;
@@ -25,8 +29,8 @@
   </style>
 </head>
 <body>
-  <div></div>
-  <div id="second"></div>
-  <div></div>
+  <div>1</div>
+  <div id="second">2</div>
+  <div>3</div>
 </body>
 </html>
