--- a/transforms/index.html
+++ b/transforms/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Transformations</title>
   <style>
+    body {
+      padding: 100px;
+    }
     img {
       border-radius: 50%;
       width: 200px;
